--- a/pokedex/flaskr/templates/hello.html
+++ b/pokedex/flaskr/templates/hello.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <title>Hello from Flask</title>
 <h1>Hello World!</h1>
-<!--<img src="static/data/Ace_Pilot_Morty/big_image.png">
+<img src="{{ image }}">
