--- a/pokedex/flaskr/templates/pokedex.html
+++ b/pokedex/flaskr/templates/pokedex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
   <div id="pokedex">
