--- a/pokedex/pokedex/templates/pokedex.html
+++ b/pokedex/pokedex/templates/pokedex.html
@@ -4,6 +4,9 @@
 <head>
 </head>
 <body>
+  <audio autoplay>
+    <source src="{{ noise }}" type="audio/mpeg">
+  </audio>
   <div id="pokedex">
     <div id="left">
       <div id="logo"></div>
